crates/swc_ecma_parser/tests/test262-error-references/fail/82b8003b91d8b346.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/82b8003b91d8b346.js:1:10
  |
1 | (b, ...a)
  |          ^

